# svml-testsuite

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  precommit-tests.py
scripts/: attr-checks.py  gen-apply-macro.py  precommit-tests.py  sys-info.py
src/: compression-stream.c  compression-stream.h  driver.c  math-defs.c  math-defs.h  math-func-defs.h  mpfr-func-defs.h  mpfr-gen.c  mpfr-gen.h  svml-bench.h  svml-benchmarker.c  svml-benchmarker.h  svml-dbl-state.c  svml-dbl-state.h  svml-def-helpers.h  svml-defs.c  svml-defs.h  svml-flt-state.h  svml-fp-eq.h  svml-func-defs.h  svml-raw-defs.h  svml-test-constants.h  svml-test-helpers.h  svml-tester.c  svml-tester.h  svml-tests.c  svml-tests.h
src/arch/: ll-getcpu.h  ll-intrin.h  ll-pause.h  ll-prefetch.h  ll-syscall.h  ll-timing.h  ll-tls.h
src/arch/x86/: x86-getcpu.h  x86-inl-asm.h  x86-pause.h  x86-prefetch.h  x86-syscall.h  x86-timing.h  x86-tls.h
src/asm/: asm-common.h  libc-asm-common.h  ulp-info.txt
src/asm/glibc/: svml_d_log8_core_avx512.S  svml_d_sincos8_core_avx512.S
src/asm/glibc/stubs/: svml_sd_wrapper_impl.h
src/asm/libc-defs/: libc-avx2-vecs.h  libc-evex-vecs-common.h  libc-evex256-vecs.h  libc-evex512-vecs.h
src/asm/man/: acos.man  acosf.man  acosh.man  acoshf.man  asin.man  asinf.man  asinh.man  asinhf.man  atan.man  atan2.man  atan2f.man  atanf.man  atanh.man  atanhf.man  cabs.man  cabsf.man  cacos.man  cacosf.man  cacosh.man  cacoshf.man  carg.man  cargf.man  casin.man  casinf.man  casinh.man  casinhf.man  catan.man  catanf.man  catanh.man  catanhf.man  cbrt.man  cbrtf.man  ccos.man  ccosf.man  ccosh.man  ccoshf.man  ceil.man  ceilf.man  cexp.man  cexpf.man  (+157 more)
src/asm/misc/double/: ceil-1-sse4-dev.S  ceil-1-sse4-glibc.S  floor-1-sse4-dev.S  floor-1-sse4-glibc.S  fmax-1-sse2-dev.S  fmax-1-sse2-glibc.S  fmin-1-sse2-dev.S  fmin-1-sse2-glibc.S  llrint-1-sse2-dev.S  llrint-1-sse2-glibc.S  nearbyint-1-sse4-dev.S  nearbyint-1-sse4-glibc.S  rint-1-sse4-dev.S  rint-1-sse4-glibc.S  roundeven-1-sse4-dev.S  roundeven-1-sse4-glibc.S  signbit-1-sse2-dev.S  signbit-1-sse2-glibc.S  trunc-1-sse4-dev.S  trunc-1-sse4-glibc.S
src/asm/misc/float/: ceilf-1-sse4-dev.S  ceilf-1-sse4-glibc.S  floorf-1-sse4-dev.S  floorf-1-sse4-glibc.S  fmaxf-1-sse2-dev.S  fmaxf-1-sse2-glibc.S  fminf-1-sse2-dev.S  fminf-1-sse2-glibc.S  llrintf-1-sse2-dev.S  llrintf-1-sse2-glibc.S  nearbyintf-1-sse4-dev.S  nearbyintf-1-sse4-glibc.S  rintf-1-sse4-dev.S  rintf-1-sse4-glibc.S  roundevenf-1-sse4-dev.S  roundevenf-1-sse4-glibc.S  signbitf-1-sse2-dev.S  signbitf-1-sse2-glibc.S  truncf-1-sse4-dev.S  truncf-1-sse4-glibc.S
src/asm/scripts/: all-avx2-float-data  all-avx512-float-data  all-sse4-float-data  analyze-v2.py  analyze.py  analyzer-v2.setup  analyzer.setup  bad.txt  collect-rodata.py  fixup-sections.py  fixup-sincos.py  fixup.py  fixup2.py  fixup3.py  good.txt  opt-rodata.py  opt-rodata2.py  organize-files.py
src/asm/svml/: dup-data.txt  fixup-bad.py  replace.py  replacer.py  tmp-dev.txt  tmp-glibc.txt  tmp.txt
src/asm/svml/double/: acos-2-sse2-wrapped-dev.S  acos-2-sse2-wrapped-glibc.S  acos-2-sse4-dev.S  acos-2-sse4-glibc.S  acos-4-avx-dev.S  acos-4-avx-glibc.S  acos-4-avx2-dev.S  acos-4-avx2-glibc.S  acos-4-sse2-wrapped-dev.S  acos-4-sse2-wrapped-glibc.S  acos-8-avx2-wrapped-dev.S  acos-8-avx2-wrapped-glibc.S  acos-8-avx512-dev.S  acos-8-avx512-glibc.S  acosh-2-sse2-wrapped-dev.S  acosh-2-sse2-wrapped-glibc.S  acosh-2-sse4-dev.S  acosh-2-sse4-glibc.S  acosh-4-avx-dev.S  acosh-4-avx-glibc.S  acosh-4-avx2-dev.S  acosh-4-avx2-glibc.S  acosh-4-sse2-wrapped-dev.S  acosh-4-sse2-wrapped-glibc.S  acosh-8-avx2-wrapped-dev.S  acosh-8-avx2-wrapped-glibc.S  acosh-8-avx512-dev.S  acosh-8-avx512-glibc.S  asin-2-sse2-wrapped-dev.S  asin-2-sse2-wrapped-glibc.S  asin-2-sse4-dev.S  asin-2-sse4-glibc.S  asin-4-avx-dev.S  asin-4-avx-glibc.S  asin-4-avx2-dev.S  asin-4-avx2-glibc.S  asin-4-sse2-wrapped-dev.S  asin-4-sse2-wrapped-glibc.S  asin-8-avx2-wrapped-dev.S  asin-8-avx2-wrapped-glibc.S  (+526 more)
src/asm/svml/float/: acosf-16-avx2-wrapped-dev.S  acosf-16-avx2-wrapped-glibc.S  acosf-16-avx512-dev.S  acosf-16-avx512-glibc.S  acosf-4-sse2-wrapped-dev.S  acosf-4-sse2-wrapped-glibc.S  acosf-4-sse4-dev.S  acosf-4-sse4-glibc.S  acosf-8-avx-dev.S  acosf-8-avx-glibc.S  acosf-8-avx2-dev.S  acosf-8-avx2-glibc.S  acosf-8-sse2-wrapped-dev.S  acosf-8-sse2-wrapped-glibc.S  acoshf-16-avx2-wrapped-dev.S  acoshf-16-avx2-wrapped-glibc.S  (+563 more)
src/bench/: bench-common.h  bench-decls.h  bench-driver.c  bench-generator.h  benchmarks.c  benchmarks.h  timing.c  timing.h
src/bench/arch/: ll-timing.h
src/container/: hashtable.bench.c  hashtable.bench.h  hashtable.test.c  hashtable.test.h  hl-defs.h  hl-user-defs.h  rh-hashtable.h  rh-table-common.h  rh-table-types.h  rhi-hashtable.h  st-hashtable.h
src/lib/: alloc-custom.h  commonlib.h  string-custom.h
src/lib/algo/: sort.h  sort.test.c
src/lib/hash/: hash.h  xxhash.h
src/lib/stats/: stats.c  stats.h  stats.test.c
src/sys/: sys-info.h
src/test/: test-common.c  test-common.h  test-decls.h  test-driver.c  tests.c  tests.h
src/thread/: barrier.h  cpuset.c  cpuset.h  cpuset.test.c  mutex.h  sema.h  spinlock.h  thread-common.h  thread.h  tls.h
src/thread/internal/: thread-internal-common.h
src/thread/rseq/: rseq-arch.h  rseq-defs.h  rseq-glibc-support.c  rseq-glibc-support.h  rseq-linux-support.h  rseq-portable.h  rseq.c  rseq.h  rseq.test.c
src/util/: arg.c  arg.h  attr-portability.h  attrs.h  builtin-portability.h  common.h  compiler.h  error-util.c  error-util.h  file-util.c  file-util.h  func-decl-generator.h  func-decl-types.h  func-decl-utils.c  func-decl-utils.h  getcpu-portable.h  inline-math.bench.c  inline-math.h  inline-math.test.c  macro.h  memory-util.c  memory-util.h  portability.h  print.h  random.bench.c  random.c  random.h  random.test.c  regex-util.c  regex-util.h  sched-util.bench.c  sched-util.c  sched-util.h  stack-util.c  stack-util.h  stack-util.test.c  string-util.h  sys-util.c  sys-util.h  time-util.c  (+13 more)
src/util/internal/: generated-macro.h  generated-macro.test.c  timers.h
(+1162 files in other folders)
